refactor player joining lobby
add max players to lobby
