# api/src/tsoa/routes.ts
@@ -51,6 +51,7 @@ const models: TsoaRoute.Models = {
             "lobby_creator": {"dataType":"double","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
+            "max_players": {"dataType":"double","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "practice": {"dataType":"boolean","required":true},
@@ -81,6 +82,7 @@ const models: TsoaRoute.Models = {
             "lobby_creator": {"dataType":"double","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
+            "max_players": {"dataType":"double","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "practice": {"dataType":"boolean","required":true},
@@ -109,6 +111,7 @@ const models: TsoaRoute.Models = {
             "lobby_creator": {"dataType":"double","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
+            "max_players": {"dataType":"double","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "practice": {"dataType":"boolean","required":true},
@@ -137,6 +140,7 @@ const models: TsoaRoute.Models = {
             "lobby_creator": {"dataType":"double","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
+            "max_players": {"dataType":"double","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "practice": {"dataType":"boolean","required":true},
@@ -157,6 +161,7 @@ const models: TsoaRoute.Models = {
             "lobby_creator": {"dataType":"double","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
+            "max_players": {"dataType":"double","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "practice": {"dataType":"boolean","required":true},
